// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`renders pagination navigation 1`] = `

<nav
  data-slot="pagination"
  class
>
  <ul
    data-slot="pagination-content"
    class="grid-cols-8 gap-px rounded transition-transform duration-100 xl:grid-cols-10 **:data-[slot=pagination-link]:h-12 flex justify-between"
  >
    <li
      data-slot="pagination-item"
      class="text-muted-foreground bg-background flex h-full w-full items-center justify-center rounded text-sm font-medium max-xl:col-span-full"
    >
      <a
        aria-label="Go to previous page"
        data-slot="pagination-link"
        class="hover:text-foreground hover:bg-background-secondary h-full w-full justify-center rounded p-3 transition-[color,transform] duration-100 cursor-not-allowed opacity-50 inline-flex items-center gap-1 [&amp;_svg]:shrink-0 **:data-[slot=icon]:size-4 **:data-[slot=icon]:transition-transform **:data-[slot=icon]:duration-100 hover:**:data-[slot=icon]:-translate-x-1"
      >
        <gui-chevron-left-icon data-slot="icon">
        </gui-chevron-left-icon>
        <span class="capitalize">
          previous
        </span>
      </a>
    </li>
    <li
      data-slot="pagination-item"
      class="text-muted-foreground bg-background flex h-full w-full items-center justify-center rounded text-sm font-medium"
    >
      <a
        aria-label="Page link for 1"
        data-slot="pagination-link"
        class="hover:text-foreground hover:bg-background-secondary inline-flex h-full w-full cursor-pointer items-center justify-center rounded p-3 transition-[color,transform] duration-100 font-mono tabular-nums bg-foreground/10 text-foreground"
      >
        1
      </a>
    </li>
    <li
      data-slot="pagination-item"
      class="text-muted-foreground bg-background flex h-full w-full items-center justify-center rounded text-sm font-medium"
    >
      <a
        aria-label="Page link for 2"
        data-slot="pagination-link"
        class="hover:text-foreground hover:bg-background-secondary inline-flex h-full w-full cursor-pointer items-center justify-center rounded p-3 transition-[color,transform] duration-100 font-mono tabular-nums"
      >
        2
      </a>
    </li>
    <li
      data-slot="pagination-item"
      class="text-muted-foreground bg-background flex h-full w-full items-center justify-center rounded text-sm font-medium"
    >
      <a
        aria-label="Page link for 3"
        data-slot="pagination-link"
        class="hover:text-foreground hover:bg-background-secondary inline-flex h-full w-full cursor-pointer items-center justify-center rounded p-3 transition-[color,transform] duration-100 font-mono tabular-nums"
      >
        3
      </a>
    </li>
    <li
      data-slot="pagination-item"
      class="text-muted-foreground bg-background flex h-full w-full items-center justify-center rounded text-sm font-medium"
    >
      <a
        aria-label="Page link for 4"
        data-slot="pagination-link"
        class="hover:text-foreground hover:bg-background-secondary inline-flex h-full w-full cursor-pointer items-center justify-center rounded p-3 transition-[color,transform] duration-100 font-mono tabular-nums"
      >
        4
      </a>
    </li>
    <li
      data-slot="pagination-item"
      class="text-muted-foreground bg-background flex h-full w-full items-center justify-center rounded text-sm font-medium max-xl:col-span-full"
    >
      <a
        aria-label="Go to next page"
        data-slot="pagination-link"
        class="hover:text-foreground hover:bg-background-secondary h-full w-full cursor-pointer justify-center rounded p-3 transition-[color,transform] duration-100 inline-flex items-center gap-1 [&amp;_svg]:shrink-0 **:data-[slot=icon]:size-4 **:data-[slot=icon]:transition-transform **:data-[slot=icon]:duration-100 hover:**:data-[slot=icon]:translate-x-1"
      >
        <span class="capitalize">
          next
        </span>
        <gui-chevron-right-icon data-slot="icon">
        </gui-chevron-right-icon>
      </a>
    </li>
  </ul>
</nav>

`;

exports[`renders pagination on first page 1`] = `

<nav
  data-slot="pagination"
  class
>
  <ul
    data-slot="pagination-content"
    class="grid-cols-8 gap-px rounded transition-transform duration-100 xl:grid-cols-10 **:data-[slot=pagination-link]:h-12 flex justify-between"
  >
    <li
      data-slot="pagination-item"
      class="text-muted-foreground bg-background flex h-full w-full items-center justify-center rounded text-sm font-medium max-xl:col-span-full"
    >
      <a
        aria-label="Go to previous page"
        data-slot="pagination-link"
        class="hover:text-foreground hover:bg-background-secondary h-full w-full justify-center rounded p-3 transition-[color,transform] duration-100 cursor-not-allowed opacity-50 inline-flex items-center gap-1 [&amp;_svg]:shrink-0 **:data-[slot=icon]:size-4 **:data-[slot=icon]:transition-transform **:data-[slot=icon]:duration-100 hover:**:data-[slot=icon]:-translate-x-1"
      >
        <gui-chevron-left-icon data-slot="icon">
        </gui-chevron-left-icon>
        <span class="capitalize">
          previous
        </span>
      </a>
    </li>
    <li
      data-slot="pagination-item"
      class="text-muted-foreground bg-background flex h-full w-full items-center justify-center rounded text-sm font-medium"
    >
      <a
        aria-label="Page link for 1"
        data-slot="pagination-link"
        class="hover:text-foreground hover:bg-background-secondary inline-flex h-full w-full cursor-pointer items-center justify-center rounded p-3 transition-[color,transform] duration-100 font-mono tabular-nums bg-foreground/10 text-foreground"
      >
        1
      </a>
    </li>
    <li
      data-slot="pagination-item"
      class="text-muted-foreground bg-background flex h-full w-full items-center justify-center rounded text-sm font-medium"
    >
      <a
        aria-label="Page link for 2"
        data-slot="pagination-link"
        class="hover:text-foreground hover:bg-background-secondary inline-flex h-full w-full cursor-pointer items-center justify-center rounded p-3 transition-[color,transform] duration-100 font-mono tabular-nums"
      >
        2
      </a>
    </li>
    <li
      data-slot="pagination-item"
      class="text-muted-foreground bg-background flex h-full w-full items-center justify-center rounded text-sm font-medium"
    >
      <a
        aria-label="Page link for 3"
        data-slot="pagination-link"
        class="hover:text-foreground hover:bg-background-secondary inline-flex h-full w-full cursor-pointer items-center justify-center rounded p-3 transition-[color,transform] duration-100 font-mono tabular-nums"
      >
        3
      </a>
    </li>
    <li
      data-slot="pagination-item"
      class="text-muted-foreground bg-background flex h-full w-full items-center justify-center rounded text-sm font-medium"
    >
      <a
        aria-label="Page link for 4"
        data-slot="pagination-link"
        class="hover:text-foreground hover:bg-background-secondary inline-flex h-full w-full cursor-pointer items-center justify-center rounded p-3 transition-[color,transform] duration-100 font-mono tabular-nums"
      >
        4
      </a>
    </li>
    <li
      data-slot="pagination-item"
      class="text-muted-foreground bg-background flex h-full w-full items-center justify-center rounded text-sm font-medium max-xl:col-span-full"
    >
      <a
        aria-label="Go to next page"
        data-slot="pagination-link"
        class="hover:text-foreground hover:bg-background-secondary h-full w-full cursor-pointer justify-center rounded p-3 transition-[color,transform] duration-100 inline-flex items-center gap-1 [&amp;_svg]:shrink-0 **:data-[slot=icon]:size-4 **:data-[slot=icon]:transition-transform **:data-[slot=icon]:duration-100 hover:**:data-[slot=icon]:translate-x-1"
      >
        <span class="capitalize">
          next
        </span>
        <gui-chevron-right-icon data-slot="icon">
        </gui-chevron-right-icon>
      </a>
    </li>
  </ul>
</nav>

`;

exports[`renders pagination on last page 1`] = `

<nav
  data-slot="pagination"
  class
>
  <ul
    data-slot="pagination-content"
    class="grid-cols-8 gap-px rounded transition-transform duration-100 xl:grid-cols-10 **:data-[slot=pagination-link]:h-12 flex justify-between"
  >
    <li
      data-slot="pagination-item"
      class="text-muted-foreground bg-background flex h-full w-full items-center justify-center rounded text-sm font-medium max-xl:col-span-full"
    >
      <a
        aria-label="Go to previous page"
        data-slot="pagination-link"
        class="hover:text-foreground hover:bg-background-secondary h-full w-full cursor-pointer justify-center rounded p-3 transition-[color,transform] duration-100 inline-flex items-center gap-1 [&amp;_svg]:shrink-0 **:data-[slot=icon]:size-4 **:data-[slot=icon]:transition-transform **:data-[slot=icon]:duration-100 hover:**:data-[slot=icon]:-translate-x-1"
      >
        <gui-chevron-left-icon data-slot="icon">
        </gui-chevron-left-icon>
        <span class="capitalize">
          previous
        </span>
      </a>
    </li>
    <li
      data-slot="pagination-item"
      class="text-muted-foreground bg-background flex h-full w-full items-center justify-center rounded text-sm font-medium"
    >
      <a
        aria-label="Page link for 1"
        data-slot="pagination-link"
        class="hover:text-foreground hover:bg-background-secondary inline-flex h-full w-full cursor-pointer items-center justify-center rounded p-3 transition-[color,transform] duration-100 font-mono tabular-nums"
      >
        1
      </a>
    </li>
    <li
      data-slot="pagination-item"
      class="text-muted-foreground bg-background flex h-full w-full items-center justify-center rounded text-sm font-medium"
    >
      <a
        aria-label="Page link for 2"
        data-slot="pagination-link"
        class="hover:text-foreground hover:bg-background-secondary inline-flex h-full w-full cursor-pointer items-center justify-center rounded p-3 transition-[color,transform] duration-100 font-mono tabular-nums"
      >
        2
      </a>
    </li>
    <li
      data-slot="pagination-item"
      class="text-muted-foreground bg-background flex h-full w-full items-center justify-center rounded text-sm font-medium"
    >
      <a
        aria-label="Page link for 3"
        data-slot="pagination-link"
        class="hover:text-foreground hover:bg-background-secondary inline-flex h-full w-full cursor-pointer items-center justify-center rounded p-3 transition-[color,transform] duration-100 font-mono tabular-nums"
      >
        3
      </a>
    </li>
    <li
      data-slot="pagination-item"
      class="text-muted-foreground bg-background flex h-full w-full items-center justify-center rounded text-sm font-medium"
    >
      <a
        aria-label="Page link for 4"
        data-slot="pagination-link"
        class="hover:text-foreground hover:bg-background-secondary inline-flex h-full w-full cursor-pointer items-center justify-center rounded p-3 transition-[color,transform] duration-100 font-mono tabular-nums bg-foreground/10 text-foreground"
      >
        4
      </a>
    </li>
    <li
      data-slot="pagination-item"
      class="text-muted-foreground bg-background flex h-full w-full items-center justify-center rounded text-sm font-medium max-xl:col-span-full"
    >
      <a
        aria-label="Go to next page"
        data-slot="pagination-link"
        class="hover:text-foreground hover:bg-background-secondary h-full w-full justify-center rounded p-3 transition-[color,transform] duration-100 cursor-not-allowed opacity-50 inline-flex items-center gap-1 [&amp;_svg]:shrink-0 **:data-[slot=icon]:size-4 **:data-[slot=icon]:transition-transform **:data-[slot=icon]:duration-100 hover:**:data-[slot=icon]:translate-x-1"
      >
        <span class="capitalize">
          next
        </span>
        <gui-chevron-right-icon data-slot="icon">
        </gui-chevron-right-icon>
      </a>
    </li>
  </ul>
</nav>

`;

exports[`renders pagination with many pages 1`] = `

<nav
  data-slot="pagination"
  class
>
  <ul
    data-slot="pagination-content"
    class="grid gap-px rounded transition-transform duration-100 **:data-[slot=pagination-link]:h-12 grid-cols-10 xl:grid-cols-12"
  >
    <li
      data-slot="pagination-item"
      class="text-muted-foreground bg-background flex h-full w-full items-center justify-center rounded text-sm font-medium max-xl:col-span-full"
    >
      <a
        aria-label="Go to previous page"
        data-slot="pagination-link"
        class="hover:text-foreground hover:bg-background-secondary h-full w-full cursor-pointer justify-center rounded p-3 transition-[color,transform] duration-100 inline-flex items-center gap-1 [&amp;_svg]:shrink-0 **:data-[slot=icon]:size-4 **:data-[slot=icon]:transition-transform **:data-[slot=icon]:duration-100 hover:**:data-[slot=icon]:-translate-x-1"
      >
        <gui-chevron-left-icon data-slot="icon">
        </gui-chevron-left-icon>
        <span class="capitalize">
          previous
        </span>
      </a>
    </li>
    <li
      data-slot="pagination-item"
      class="text-muted-foreground bg-background flex h-full w-full items-center justify-center rounded text-sm font-medium"
    >
      <a
        aria-label="Page link"
        data-slot="pagination-link"
        class="hover:text-foreground hover:bg-background-secondary inline-flex h-full w-full cursor-pointer items-center justify-center rounded p-3 transition-[color,transform] duration-100"
      >
        1
      </a>
    </li>
    <li
      data-slot="pagination-ellipses"
      class="text-muted-foreground bg-background flex h-full w-full items-center justify-center rounded text-sm font-medium **:data-[slot=ellipses]:size-3"
      aria-hidden="true"
    >
      <gui-more-horizontal-icon data-slot="ellipses">
      </gui-more-horizontal-icon>
      <span class="sr-only">
        More pages
      </span>
    </li>
    <li
      data-slot="pagination-item"
      class="text-muted-foreground bg-background flex h-full w-full items-center justify-center rounded text-sm font-medium"
    >
      <a
        aria-label="Page link for 2"
        data-slot="pagination-link"
        class="hover:text-foreground hover:bg-background-secondary inline-flex h-full w-full cursor-pointer items-center justify-center rounded p-3 transition-[color,transform] duration-100 font-mono tabular-nums"
      >
        2
      </a>
    </li>
    <li
      data-slot="pagination-item"
      class="text-muted-foreground bg-background flex h-full w-full items-center justify-center rounded text-sm font-medium"
    >
      <a
        aria-label="Page link for 3"
        data-slot="pagination-link"
        class="hover:text-foreground hover:bg-background-secondary inline-flex h-full w-full cursor-pointer items-center justify-center rounded p-3 transition-[color,transform] duration-100 font-mono tabular-nums"
      >
        3
      </a>
    </li>
    <li
      data-slot="pagination-item"
      class="text-muted-foreground bg-background flex h-full w-full items-center justify-center rounded text-sm font-medium"
    >
      <a
        aria-label="Page link for 4"
        data-slot="pagination-link"
        class="hover:text-foreground hover:bg-background-secondary inline-flex h-full w-full cursor-pointer items-center justify-center rounded p-3 transition-[color,transform] duration-100 font-mono tabular-nums"
      >
        4
      </a>
    </li>
    <li
      data-slot="pagination-item"
      class="text-muted-foreground bg-background flex h-full w-full items-center justify-center rounded text-sm font-medium"
    >
      <a
        aria-label="Page link for 5"
        data-slot="pagination-link"
        class="hover:text-foreground hover:bg-background-secondary inline-flex h-full w-full cursor-pointer items-center justify-center rounded p-3 transition-[color,transform] duration-100 font-mono tabular-nums bg-foreground/10 text-foreground"
      >
        5
      </a>
    </li>
    <li
      data-slot="pagination-item"
      class="text-muted-foreground bg-background flex h-full w-full items-center justify-center rounded text-sm font-medium"
    >
      <a
        aria-label="Page link for 6"
        data-slot="pagination-link"
        class="hover:text-foreground hover:bg-background-secondary inline-flex h-full w-full cursor-pointer items-center justify-center rounded p-3 transition-[color,transform] duration-100 font-mono tabular-nums"
      >
        6
      </a>
    </li>
    <li
      data-slot="pagination-item"
      class="text-muted-foreground bg-background flex h-full w-full items-center justify-center rounded text-sm font-medium"
    >
      <a
        aria-label="Page link for 7"
        data-slot="pagination-link"
        class="hover:text-foreground hover:bg-background-secondary inline-flex h-full w-full cursor-pointer items-center justify-center rounded p-3 transition-[color,transform] duration-100 font-mono tabular-nums"
      >
        7
      </a>
    </li>
    <li
      data-slot="pagination-ellipses"
      class="text-muted-foreground bg-background flex h-full w-full items-center justify-center rounded text-sm font-medium **:data-[slot=ellipses]:size-3"
      aria-hidden="true"
    >
      <gui-more-horizontal-icon data-slot="ellipses">
      </gui-more-horizontal-icon>
      <span class="sr-only">
        More pages
      </span>
    </li>
    <li
      data-slot="pagination-item"
      class="text-muted-foreground bg-background flex h-full w-full items-center justify-center rounded text-sm font-medium"
    >
      <a
        aria-label="Page link for 20"
        data-slot="pagination-link"
        class="hover:text-foreground hover:bg-background-secondary inline-flex h-full w-full cursor-pointer items-center justify-center rounded p-3 transition-[color,transform] duration-100 font-mono tabular-nums"
      >
        20
      </a>
    </li>
    <li
      data-slot="pagination-item"
      class="text-muted-foreground bg-background flex h-full w-full items-center justify-center rounded text-sm font-medium max-xl:col-span-full"
    >
      <a
        aria-label="Go to next page"
        data-slot="pagination-link"
        class="hover:text-foreground hover:bg-background-secondary h-full w-full cursor-pointer justify-center rounded p-3 transition-[color,transform] duration-100 inline-flex items-center gap-1 [&amp;_svg]:shrink-0 **:data-[slot=icon]:size-4 **:data-[slot=icon]:transition-transform **:data-[slot=icon]:duration-100 hover:**:data-[slot=icon]:translate-x-1"
      >
        <span class="capitalize">
          next
        </span>
        <gui-chevron-right-icon data-slot="icon">
        </gui-chevron-right-icon>
      </a>
    </li>
  </ul>
</nav>

`;

exports[`renders pagination with no results 1`] = `

<nav
  data-slot="pagination"
  class
>
  <ul
    data-slot="pagination-content"
    class="grid-cols-8 gap-px rounded transition-transform duration-100 xl:grid-cols-10 **:data-[slot=pagination-link]:h-12 flex justify-between"
  >
    <li
      data-slot="pagination-item"
      class="text-muted-foreground bg-background flex h-full w-full items-center justify-center rounded text-sm font-medium max-xl:col-span-full"
    >
      <a
        aria-label="Go to previous page"
        data-slot="pagination-link"
        class="hover:text-foreground hover:bg-background-secondary h-full w-full justify-center rounded p-3 transition-[color,transform] duration-100 cursor-not-allowed opacity-50 inline-flex items-center gap-1 [&amp;_svg]:shrink-0 **:data-[slot=icon]:size-4 **:data-[slot=icon]:transition-transform **:data-[slot=icon]:duration-100 hover:**:data-[slot=icon]:-translate-x-1"
      >
        <gui-chevron-left-icon data-slot="icon">
        </gui-chevron-left-icon>
        <span class="capitalize">
          previous
        </span>
      </a>
    </li>
    <li
      data-slot="pagination-item"
      class="text-muted-foreground bg-background flex h-full w-full items-center justify-center rounded text-sm font-medium max-xl:col-span-full"
    >
      <a
        aria-label="Go to next page"
        data-slot="pagination-link"
        class="hover:text-foreground hover:bg-background-secondary h-full w-full justify-center rounded p-3 transition-[color,transform] duration-100 cursor-not-allowed opacity-50 inline-flex items-center gap-1 [&amp;_svg]:shrink-0 **:data-[slot=icon]:size-4 **:data-[slot=icon]:transition-transform **:data-[slot=icon]:duration-100 hover:**:data-[slot=icon]:translate-x-1"
      >
        <span class="capitalize">
          next
        </span>
        <gui-chevron-right-icon data-slot="icon">
        </gui-chevron-right-icon>
      </a>
    </li>
  </ul>
</nav>

`;
